# us-govt-vote-diffs

./: README.md  pyproject.toml
.ipynb_checkpoints/: processing_MIT-checkpoint.ipynb  processing_kaggle-checkpoint.ipynb
2_Script/: functions.py  visualisations.ipynb
2_Script/.ipynb_checkpoints/: visualisations-checkpoint.ipynb
