[tool.poetry]
name = "us-govt-vote-diffs"
version = "0.1.0"
description = ""
authors = ["Abtin Salahshor <abtin.salahshor@bonniernews.se>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.3"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
